<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.luthfi.watclass.MainActivity"
    tools:showIn="@layout/activity_main">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/greetTextView1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/greetTextView2"
            android:layout_below="@id/greetTextView1"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:paddingBottom="28dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_class"
            android:id="@+id/new_class_button"
            android:onClick="newClass"
            android:layout_below="@id/greetTextView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:elevation="2dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_term"
            android:id="@+id/current_term_button"
            android:onClick="currentTermClasses"
            android:layout_below="@id/new_class_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:elevation="2dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_terms"
            android:id="@+id/all_terms_button"
            android:onClick="viewAllTerms"
            android:layout_below="@id/current_term_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:elevation="2dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_grade"
            android:id="@+id/grade_calculator"
            android:onClick="calculateGrade"
            android:layout_below="@id/all_terms_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:elevation="2dp"/>

    </RelativeLayout>

</LinearLayout>
